# multi-agent-interview

./: .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.infra.yml  start-infra.ps1
fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt
fastapi/alembic/: env.py
fastapi/alembic/versions/: 20260318_0835_79c3cf47db92_initial_migration_with_all_tables.py  20260320_1200_1f5d8d2b6e4a_add_recommendation_support_tables.py
fastapi/app/: __init__.py  config.py  database.py  dependencies.py  main.py  worker_main.py
fastapi/app/agents/: __init__.py  base.py  coach.py  evaluator.py  flow.py  interview_flow.py  interviewer.py  task.py
fastapi/app/api/: __init__.py
fastapi/app/core/: __init__.py  cache.py  config.py  constants.py  database.py  embedding.py  exceptions.py  llm_context.py  logging.py  milvus_client.py  openai_client.py  prompts.py  qwen3_omni_realtime.py  qwen_client.py  rec_database.py  redis_client.py  security.py  stream_queue.py  utils.py
fastapi/app/middleware/: __init__.py  logging.py
fastapi/app/models/: __init__.py  base.py  career.py  evaluation.py  interview.py  learning.py  recommendation.py  user.py
fastapi/app/recommenders/: __init__.py  base.py  collaborative_filtering.py  content_based.py  hybrid.py  (+3 more)
fastapi/reports/: benchmark_report.html  benchmark_results.json  recommendation_benchmark_report.html  recommendation_benchmark_results.json
fastapi/scripts/: init_career_data.py  seed_db.py  verify_login_flow.py
fastapi/tests/: README.md
(+260 files in other folders)
